# embedded-perfmon

./: Cargo.toml  README.md
analyzer/: Cargo.toml
analyzer/src/: lib.rs  main.rs
examples/rtt/: Cargo.toml  Embed.toml  README.md
examples/rtt/.cargo/: config.toml
examples/rtt/src/: main.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  marker.rs  span.rs  start_stop.rs
transport/: Cargo.toml
transport/src/: lib.rs
