[package]
name = "embedded-perfmon-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
embedded-perfmon-transport = { path = "../transport" }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
indexmap = { version = "2.14.0", features = ["serde"] }
schemars = { version = "1.2.1", features = ["indexmap2"] }
