[package]
name = "embedded-perfmon-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-perfmon-transport = { path = "../transport" }
embassy-executor = { version = "0.10.0", default-features = false }

heapless = { version = "0.9.3", optional = true }
critical-section = { version = "1.2.0", optional = true }

[features]
# Allows you to start and stop the tracing at the cost of having a cache layer.
# If the feature is not active, then tracing is always running.
start-stop = ["dep:heapless", "dep:critical-section"]
